--- a/styles/_contactus.scss
+++ b/styles/_contactus.scss
@@ -44,6 +44,9 @@
       flex-direction: column-reverse;
       align-items: center;
     }
+    @media screen and (max-width: 500px) {
+      padding-top: 30px;
+    }
     .contact-left {
       width: 50%;
       height: auto;
