--- a/styles/_faq.scss
+++ b/styles/_faq.scss
@@ -3,6 +3,9 @@
   height: 100%;
   position: relative;
   padding-top: 60px;
+  @media screen and (max-width: 850px) {
+    padding-top: 20px;
+  }
   .treeline-white {
     width: 100vw;
     overflow: hidden;
