--- a/styles/_features.scss
+++ b/styles/_features.scss
@@ -44,6 +44,7 @@
       }
       @media screen and (max-width: 700px) {
         width: 100%;
+        margin-top: 30px;
       }
       .features-card {
         &:nth-child(2) {
